--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "format": "yarn prettier --write ."
   },
   "dependencies": {
     "expo": "~42.0.1",
+    "expo-location": "~12.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -19,6 +21,7 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "prettier": "2.3.2",
     "typescript": "~4.0.0"
   },
   "private": true
