--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "format": "yarn prettier --write ."
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "expo": "~42.0.1",
     "expo-location": "~12.1.2",
     "expo-status-bar": "~1.0.4",
@@ -21,6 +23,7 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "prettier": "2.3.2",
     "typescript": "~4.0.0"
   },
