--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "expo": "~42.0.1",
+    "expo-font": "~9.2.1",
     "expo-location": "~12.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
@@ -26,6 +27,5 @@
     "babel-plugin-inline-dotenv": "^1.6.0",
     "prettier": "2.3.2",
     "typescript": "~4.0.0"
-  },
-  "private": true
+  }
 }
